<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backWhite">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="200dp"
           android:layout_centerHorizontal="true"
           android:layout_alignParentBottom="true">

           <LinearLayout
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10sp">
               <ImageView
                   android:id="@+id/bottom_sheet_text"
                   android:src="@drawable/text"
                   android:layout_width="50sp"
                   android:layout_height="50sp"
                   android:layout_marginLeft="10sp"
                   android:layout_marginRight="10sp"
                   android:layout_gravity="center_horizontal"
                   android:contentDescription="@string/m_c_msg_reply"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/text"
                   android:textColor="@color/wordBlack"
                   android:textSize="15sp"/>
           </LinearLayout>


           <LinearLayout
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10sp">
               <ImageView
                   android:id="@+id/bottom_sheet_picture"
                   android:src="@drawable/picture"
                   android:layout_width="50sp"
                   android:layout_height="50sp"
                   android:layout_marginLeft="10sp"
                   android:layout_marginRight="10sp"
                   android:layout_gravity="center_horizontal"
                   android:contentDescription="@string/m_c_msg_reply"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/picture"
                   android:textColor="@color/wordBlack"
                   android:textSize="15sp"/>
           </LinearLayout>

           <LinearLayout
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10sp">
               <ImageView
                   android:id="@+id/bottom_sheet_album"
                   android:src="@drawable/album"
                   android:layout_width="50sp"
                   android:layout_height="50sp"
                   android:layout_marginLeft="10sp"
                   android:layout_marginRight="10sp"
                   android:layout_gravity="center_horizontal"
                   android:contentDescription="@string/m_c_msg_reply"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/album"
                   android:textColor="@color/wordBlack"
                   android:textSize="15sp"/>
           </LinearLayout>

           <LinearLayout
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10sp">
               <ImageView
                   android:id="@+id/bottom_sheet_online"
                   android:src="@drawable/online"
                   android:layout_width="50sp"
                   android:layout_height="50sp"
                   android:layout_marginLeft="10sp"
                   android:layout_marginRight="10sp"
                   android:layout_gravity="center_horizontal"
                   android:contentDescription="@string/m_c_msg_reply"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/online"
                   android:textColor="@color/wordBlack"
                   android:textSize="15sp"/>
           </LinearLayout>

       </LinearLayout>
   </RelativeLayout>

</android.support.v4.widget.NestedScrollView>