<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </FrameLayout>

    <!--分割线-->
    <View
        android:id="@+id/cut_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/bottom_bar"
        android:background="@color/cutLineColor"/>

    <!--底部导航栏-->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/backWhite">
        <!--首页-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/first_page_pic"
                android:src="@drawable/first_uselect"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginTop="10sp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/first_page"/>
            <TextView
                android:id="@+id/first_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/first_page_pic"
                android:text="@string/first_page"
                android:textSize="12sp"/>
        </RelativeLayout>
        <!--进吧-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/enter_bar_pic"
                android:src="@drawable/enter_uselect"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginTop="10sp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/enter_bar"/>
            <TextView
                android:id="@+id/enter_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enter_bar_pic"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_bar"
                android:textSize="12sp"/>
        </RelativeLayout>
        <!--发帖-->
        <ImageView
            android:id="@+id/distribute"
            android:src="@drawable/distribute"
            android:layout_width="0dp"
            android:layout_height="39sp"
            android:layout_weight="1.5"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/distribute"/>
        <!--消息-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/message_notify_pic"
                android:src="@drawable/message_uselect"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginTop="10sp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/message_notify"/>
            <TextView
                android:id="@+id/message_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_notify_pic"
                android:layout_centerHorizontal="true"
                android:text="@string/message_notify"
                android:textSize="12sp"/>
        </RelativeLayout>
        <!--我的-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/my_details_pic"
                android:src="@drawable/my_uselect"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginTop="10sp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/my_details"/>
            <TextView
                android:id="@+id/my_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_details_pic"
                android:layout_centerHorizontal="true"
                android:text="@string/my_details"
                android:textSize="12sp"/>
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>