<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="#e7dbdb"/>

    <!--第一行头像、回复用户名、回复日期-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:gravity="center_vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/m_c_msg_list_item_user_icon"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp">
            <TextView
                android:id="@+id/m_c_msg_list_item_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_c_msg_right_arrow"
                android:textSize="15sp"
                android:textColor="@color/wordLightBlack"/>
            <TextView
                android:id="@+id/m_c_msg_list_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_c_msg_right_arrow"
                android:textSize="11sp"/>
        </LinearLayout>
    </LinearLayout>

    <!--第二块回复具体内容 + 用户具体留言-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/m_c_msg_list_item_reply"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:text="@string/m_n_talk"
            android:textSize="18sp"
            android:textColor="@color/wordBlack"/>
        <TextView
            android:id="@+id/m_c_msg_list_item_recent"
            android:layout_width="350sp"
            android:layout_height="50dp"
            android:background="@color/backLightGray"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/wordLightBlack"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>
    </LinearLayout>

    <!---->
    <RelativeLayout
        android:layout_width="350sp"
        android:layout_height="30sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/m_c_msg_list_item_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/m_n_talk"
            android:textSize="12sp"
            android:textColor="@color/wordLightBlack"/>
        <ImageView
            android:id="@+id/reply_icon"
            android:src="@drawable/reply"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:layout_toLeftOf="@+id/reply_text"
            android:layout_toStartOf="@id/reply_text"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp"
            android:contentDescription="@string/m_c_msg_reply" />
        <TextView
            android:id="@+id/reply_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/app_name"
            android:textSize="12sp"
            android:textColor="@color/wordLightBlack" />
    </RelativeLayout>



</LinearLayout>