<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--顶部标题栏-->
    <RelativeLayout
        android:id="@+id/m_n_title_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/message_left"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/message_center"
            android:layout_toStartOf="@+id/message_center">
            <TextView
                android:id="@+id/m_n_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/m_n_message"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/m_n_message_bottom_line"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:background="@color/tabBottom"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/message_center"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/m_n_talk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/m_n_talk"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/m_n_talk_bottom_line"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:background="@color/tabBottom"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/message_right"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/message_center"
            android:layout_toEndOf="@+id/message_center">
            <TextView
                android:id="@+id/m_n_notify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/m_n_notify"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/m_n_notify_bottom_line"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:background="@color/tabBottom"/>
        </RelativeLayout>
        <!--标题栏右侧图标-->
        <ImageView
            android:id="@+id/m_n_talk_icon"
            android:src="@drawable/m_n_talk_light"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/m_n_talk_icon"/>
    </RelativeLayout>


    <View
        android:id="@+id/m_n_cut_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/m_n_title_bar"
        android:background="@color/cutLineColor"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/m_n_msg_child_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
</LinearLayout>