<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/m_c_msg_mine_frame"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center_vertical"
        android:background="#FFFFFF">
        <!--我的-->
        <ImageView
            android:id="@+id/m_c_msg_mine"
            android:src="@drawable/my_select"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:layout_toRightOf="@id/m_c_msg_mine"
            android:layout_toEndOf="@id/m_c_msg_mine"
            android:text="@string/m_c_msg_mine"
            android:textSize="16sp"
            android:textColor="@color/wordBlack"/>
        <ImageView
            android:src="@drawable/right_arrow"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/m_c_msg_right_arrow"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cutLineGray"/>
    <RelativeLayout
        android:id="@+id/m_c_msg_like_frame"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center_vertical"
        android:background="#FFFFFF">
        <!--点赞-->
        <ImageView
            android:id="@+id/m_c_msg_like"
            android:src="@drawable/like"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"  />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:layout_toRightOf="@id/m_c_msg_like"
            android:layout_toEndOf="@id/m_c_msg_like"
            android:text="@string/m_c_msg_like"
            android:textSize="16sp"
            android:textColor="@color/wordBlack"/>
        <ImageView
            android:src="@drawable/right_arrow"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/m_c_msg_right_arrow"/>
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/m_c_msg_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/m_c_msg_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>