<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#e7dbdb"/>

    <!--第一行头像、回复用户名、回复日期-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:gravity="center_vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/my_uselect"
            android:id="@+id/f_c_first_list_item_user_icon"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp">
            <TextView
                android:id="@+id/f_c_first_list_item_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_c_msg_right_arrow"
                android:textSize="15sp"
                android:textColor="@color/wordLightBlack"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/f_c_first_list_item_source_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginEnd="10sp"
                    android:text="@string/m_c_msg_right_arrow"
                    android:textSize="11sp"/>
                <TextView
                    android:id="@+id/f_c_first_list_item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_c_msg_right_arrow"
                    android:textSize="11sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--第二块回复具体内容 + 用户具体留言-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/f_c_first_list_item_content"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:text="@string/m_n_talk"
            android:textSize="18sp"
            android:textColor="@color/wordBlack"/>
        <LinearLayout
            android:id="@+id/f_c_first_list_item_media"
            android:orientation="horizontal"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:background="@color/backLightGray">
            <!--<ImageView-->
                <!--android:id="@+id/f_c_first_list_item_media_pic_demo"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_marginLeft="10sp"-->
                <!--android:layout_marginRight="10sp"-->
                <!--android:background="@drawable/album"-->
                <!--android:gravity="center_vertical"-->
                <!--android:paddingLeft="10sp"-->
                <!--android:paddingRight="10sp"-->
                <!--android:scaleType="centerInside"/>-->
        </LinearLayout>

    </LinearLayout>

    <!---->
    <RelativeLayout
        android:layout_width="350sp"
        android:layout_height="30sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
        <ImageView
            android:id="@+id/f_c_first_list_item_share_icon"
            android:src="@drawable/album"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/f_c_first_list_item_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/f_c_first_list_item_share_icon"
            android:layout_toEndOf="@id/f_c_first_list_item_share_icon"
            android:layout_centerVertical="true"
            android:text="@string/m_n_talk"
            android:textSize="12sp"
            android:textColor="@color/wordLightBlack"/>
        <ImageView
            android:src="@drawable/reply"
            android:id="@+id/f_c_first_list_item_comment_icon"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/f_c_first_list_item_comment"
            android:layout_toStartOf="@id/f_c_first_list_item_comment"/>
        <TextView
            android:id="@+id/f_c_first_list_item_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/m_n_talk"
            android:textSize="12sp"
            android:textColor="@color/wordLightBlack"/>
        <ImageView
            android:id="@+id/like_icon"
            android:src="@drawable/icon_comment_like"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:layout_toLeftOf="@+id/like_number"
            android:layout_toStartOf="@id/like_number"
            android:layout_centerVertical="true"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp"
            android:contentDescription="@string/m_c_msg_reply" />
        <TextView
            android:id="@+id/like_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textSize="12sp"
            android:textColor="@color/wordLightBlack" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#e7dbdb"/>

</LinearLayout>